--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,5 +8,7 @@
             <li><a href="#">API clients</a></li>
             <li><a href="#">API Health</a></li> 
         </ul>
+
+        <div class="header-right">Made with love<br /> by the MyERP Team</div>
     </div>
 </div>
