Add Glossary page, with Type list, and href that refers to it in Account format table.
Also some other minor improvements.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,7 @@
             <li><a href="/docs/1.0/api">REST API</a></li>
             <li><a href="#">API clients</a></li>
             <li><a href="#">API Health</a></li> 
+            <li><a href="/docs/1.0/glossary">Glossary</a></li> 
         </ul>
 
         <div class="header-right">Made with love<br /> by the MyERP Team</div>
