--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -4,9 +4,11 @@
         {% include head.html %}  
     </head>
     <body> 
-        <div class="content pure-g-r">
-            {% include header.html %}
-            {{ content }}
+        {% include header.html %}
+        <div class="pure-g-r">
+            <div class="pure-u-2-3 content">  
+        	   {{ content }}
+        	</div>  
         </div>  
     </body>
 </html>
