add a dropdown in the menu with the list of resources

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,27 @@
 <div class="header pure-u-1">
-    <div class="pure-menu pure-menu-open pure-menu-fixed pure-menu-horizontal">
-        <a class="pure-menu-heading" href="/"><img src="https://d2wni7o1grq1fg.cloudfront.net/201307030346/resources/images/common/myerp_logo_black.png" alt="MyERP"/>Developers</a>
 
-        <ul>
+    <div class="pure-menu pure-menu-open pure-menu-fixed pure-menu-horizontal" id="menu">
+        <a class="pure-menu-heading" href="/"><img src="https://d2wni7o1grq1fg.cloudfront.net/201307030346/resources/images/common/myerp_logo_black.png" alt="myERP"/>Developers</a>
+        <ul id="menu-data">
+
             <li><a href="/docs/1.0/overview">Overview</a></li>
-            <li><a href="/docs/1.0/api">REST API</a></li>
+            <li><a href="/docs/1.0/api">REST API</a>
+                <ul>
+                    <li><a href="/docs/1.0/api/account/">Account</a></li>
+                    <li><a href="/docs/1.0/api/account_contact/">Account Contact</a></li>
+                    <li><a href="/docs/1.0/api/project/">Project</a></li>
+                    <li><a href="/docs/1.0/api/item/">Item</a></li>
+                    <li><a href="/docs/1.0/api/item_family/">Item family</a></li>
+                    <li><a href="/docs/1.0/api/sales_order/">Sales order</a></li>
+                    <li><a href="/docs/1.0/api/order_line/">Order line</a></li>
+                    <li><a href="/docs/1.0/api/accounting_transaction/">Accounting transaction</a></li>
+                    <li><a href="/docs/1.0/api/payment_term/">Payment term</a></li>
+                    <li><a href="/docs/1.0/api/currency/">Currency</a></li>
+                    <li><a href="/docs/1.0/api/payment_term/">Payment term</a></li>
+                </ul>
+            </li>
             <li><a href="#">API clients</a></li>
-            <li><a href="#">API Health</a></li>
+            <li><a href="#">API Health</a></li> 
         </ul>
-
-        <div class="header-right">Made with love<br /> by the MyERP Team</div>
     </div>
 </div>
