--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,3 +7,21 @@
         <link rel="stylesheet" href="/css/syntax.css">
         <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css">
         <link rel="stylesheet" href="/css/main.css">
+		<script src="http://yui.yahooapis.com/3.14.1/build/yui/yui-min.js"></script>
+
+
+        <script>
+			YUI({
+			    classNamePrefix: 'pure'
+			}).use('gallery-sm-menu', function (Y) {
+			    var menu = new Y.Menu({
+			        container : '#menu',
+			        sourceNode: '#menu-data',
+				    orientation       : 'horizontal',
+				    hideOnOutsideClick: false,
+				    hideOnClick       : false
+			    });
+
+			    menu.render().show();
+			});
+			</script>
