use plural in the menu

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,21 +7,22 @@
             <li><a href="/docs/1.0/overview">Overview</a></li>
             <li><a href="/docs/1.0/api">REST API</a>
                 <ul>
-                    <li><a href="/docs/1.0/api/account/">Account</a></li>
-                    <li><a href="/docs/1.0/api/account_contact/">Account Contact</a></li>
-                    <li><a href="/docs/1.0/api/project/">Project</a></li>
-                    <li><a href="/docs/1.0/api/item/">Item</a></li>
-                    <li><a href="/docs/1.0/api/item_family/">Item family</a></li>
-                    <li><a href="/docs/1.0/api/sales_order/">Sales order</a></li>
-                    <li><a href="/docs/1.0/api/order_line/">Order line</a></li>
-                    <li><a href="/docs/1.0/api/accounting_transaction/">Accounting transaction</a></li>
-                    <li><a href="/docs/1.0/api/payment_term/">Payment term</a></li>
-                    <li><a href="/docs/1.0/api/currency/">Currency</a></li>
-                    <li><a href="/docs/1.0/api/payment_term/">Payment term</a></li>
+                    <li><a href="/docs/1.0/api/account/">Accounts</a></li>
+                    <li><a href="/docs/1.0/api/account_contact/">Account Contacts</a></li>
+                    <li><a href="/docs/1.0/api/project/">Projects</a></li>
+                    <li><a href="/docs/1.0/api/item/">Items</a></li>
+                    <li><a href="/docs/1.0/api/item_family/">Item families</a></li>
+                    <li><a href="/docs/1.0/api/sales_order/">Sales orders</a></li>
+                    <li><a href="/docs/1.0/api/order_line/">Order lines</a></li>
+                    <li><a href="/docs/1.0/api/accounting_transaction/">Accounting transactions</a></li>
+                    <li><a href="/docs/1.0/api/payment_term/">Payment terms</a></li>
+                    <li><a href="/docs/1.0/api/currency/">Currencies</a></li>
+                    <li><a href="/docs/1.0/api/payment_term/">Payment terms</a></li>
                 </ul>
             </li>
             <li><a href="#">API clients</a></li>
             <li><a href="#">API Health</a></li> 
         </ul>
+        <div class="header-right">Made with love<br /> by the myERP Team</div>
     </div>
 </div>
