update menus and links to redirect to the new api clients page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,8 +20,8 @@
                     <li><a href="/docs/1.0/api/payment_term/">Payment terms</a></li>
                 </ul>
             </li>
-            <li><a href="#">API clients</a></li>
-            <li><a href="#">API Health</a></li> 
+            <li><a href="/docs/1.0/libraries/">API clients</a></li>
+            <!--<li><a href="#">API Health</a></li> -->
         </ul>
         <div class="header-right">Made with love<br /> by the myERP Team</div>
     </div>
