--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,17 +7,7 @@
             <li><a href="/docs/1.0/overview">Overview</a></li>
             <li><a href="/docs/1.0/api">REST API</a>
                 <ul>
-                    <li><a href="/docs/1.0/api/account/">Accounts</a></li>
-                    <li><a href="/docs/1.0/api/account_contact/">Account Contacts</a></li>
-                    <li><a href="/docs/1.0/api/project/">Projects</a></li>
-                    <li><a href="/docs/1.0/api/item/">Items</a></li>
-                    <li><a href="/docs/1.0/api/item_family/">Item families</a></li>
-                    <li><a href="/docs/1.0/api/sales_order/">Sales orders</a></li>
-                    <li><a href="/docs/1.0/api/order_line/">Order lines</a></li>
-                    <li><a href="/docs/1.0/api/accounting_transaction/">Accounting transactions</a></li>
-                    <li><a href="/docs/1.0/api/payment_term/">Payment terms</a></li>
-                    <li><a href="/docs/1.0/api/currency/">Currencies</a></li>
-                    <li><a href="/docs/1.0/api/payment_term/">Payment terms</a></li>
+                  {% include list_resources.html %}
                 </ul>
             </li>
             <li><a href="/docs/1.0/libraries/">API clients</a></li>
