because ♥ is better than love.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,6 @@
             <li><a href="/docs/1.0/libraries/">API clients</a></li>
             <!--<li><a href="#">API Health</a></li> -->
         </ul>
-        <div class="header-right">Made with love<br /> by the myERP Team</div>
+        <div class="header-right">Made with ♥<br /> by the myERP Team</div>
     </div>
 </div>
