--- a/_includes/list_resources.html
+++ b/_includes/list_resources.html
@@ -1,5 +1,5 @@
-<li><a href="/docs/1.0/api/account/">Accounts</a></li>
-<li><a href="/docs/1.0/api/account_contact/">Account Contacts</a></li>
+<li><a href="/docs/1.0/api/customer/">Customers</a></li>
+<li><a href="/docs/1.0/api/customer_contact/">Customer Contacts</a></li>
 <li><a href="/docs/1.0/api/project/">Projects</a></li>
 <li><a href="/docs/1.0/api/item/">Items</a></li>
 <li><a href="/docs/1.0/api/item_family/">Item families</a></li>
