--- a/_includes/list_resources.html
+++ b/_includes/list_resources.html
@@ -5,7 +5,7 @@
 <li><a href="/docs/1.0/api/item_family/">Item families</a></li>
 <li><a href="/docs/1.0/api/sales_order/">Sales orders</a></li>
 <li><a href="/docs/1.0/api/order_line/">Order lines</a></li>
-<li><a href="/docs/1.0/api/accounting_transaction/">Accounting transactions</a></li>
+<li><a href="/docs/1.0/api/transaction/">Transactions</a></li>
 <li><a href="/docs/1.0/api/chart_of_accounts/">Chart of Accounts</a></li>
 <li><a href="/docs/1.0/api/payment_term/">Payment terms</a></li>
 <li><a href="/docs/1.0/api/currency/">Currencies</a></li>
