Add Vendor API to the documentation.

--- a/_includes/list_resources.html
+++ b/_includes/list_resources.html
@@ -1,4 +1,5 @@
 <li><a href="/docs/1.0/api/customer/">Customers</a></li>
+<li><a href="/docs/1.0/api/vendor/">Vendors</a></li>
 <li><a href="/docs/1.0/api/project/">Projects</a></li>
 <li><a href="/docs/1.0/api/item/">Items</a></li>
 <li><a href="/docs/1.0/api/item_family/">Item families</a></li>
