Add read-only Taxes to the documentation.

--- a/_includes/list_resources.html
+++ b/_includes/list_resources.html
@@ -8,4 +8,5 @@
 <li><a href="/docs/1.0/api/accounts/">Accounts</a></li>
 <li><a href="/docs/1.0/api/payment_term/">Payment terms</a></li>
 <li><a href="/docs/1.0/api/currency/">Currencies</a></li>
+<li><a href="/docs/1.0/api/tax/">Taxes</a></li>
 <li><a href="/docs/1.0/api/unit/">Units</a></li>
