--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,9 @@
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
-
 body {
     margin: 0 auto;
     line-height: 1.7em;
     color:#555;
-    font-size: 0.9em;
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
@@ -25,41 +20,40 @@ a:visited {color:#2e90c8;}  /* visited link */
 a:hover {color:#2e90c8; } /*text-decoration: underline}  /* mouse over link */
 a:active {color:#2e90c8;}  /* selected link */
 .justify {text-align: justify;}
-aside{
-    background: rgb(202, 60, 60);
-    padding: 0.3em 1em;
-    border-radius: 3px;
-    color: #fff;
-    text-align:center;
+.highlight {padding: 4px;margin: 1em auto;}
+pre {margin: 0;}
+
+
+section div.group {
+    border-bottom:  1px solid #999;
+    padding-bottom: 40px;
+}
+section h2{color: #2e90c8; font-size: 3em;}
+ 
+.page-content-wrapper {
+    width: 100%;
+    padding: 15px 15px 15px 285px;
 }
 
-.l-box {
-    padding: 1em;
+#home .box {
+    border: 1px solid #ccc;
+    margin: 0.6em;
+    padding: 20px;
+    min-height: 240px;
+    border-radius: 4px;
 }
+#home .box h3 {margin: 0.8em 0; font-size: 1.6em;}
+#home .box p.more {text-align: right;}
+#home .box .btn {color: white;}
+#home .splash-image {   text-align: center;}
+#home .jumbotron h1 { font-size: 300%;margin: 0.2em 0;}
+#home .jumbotron p.subhead {font-weight: 300; line-height: 1.4em;margin: 0.4em 0;}
+#home .jumbotron p .btn {color: white;}
+ 
 
-.header {
-    margin: 0 0;
-}
-    .header .pure-menu.pure-menu-open.pure-menu-fixed{
-        border-bottom: 13px solid #2e90c8;
-    }
-    .header .pure-menu {
-        padding: 0.5em;
-    }
-        .header a.pure-menu-heading > img{
-          height:30px;
-        }
 
-        .header .pure-menu li a:hover,
-        .header .pure-menu li a:focus {
-            background: #2e90c8;
-            color: white;
-        }
-    .header-right{
-        float:right;
-        text-align:right;
-        font-size:70%;
-    }
+
+
 
 body .primary-button {
     background: #2e90c8;
@@ -82,29 +76,8 @@ body .primary-button {
     cursor: default;
 }
 
-.splash {
-    margin: 2em auto 0;
-    padding: 7em 2.5em 1em;
-}
-    .splash .pure-g-r {
-        letter-spacing: 0em !important;
-    }
-    .splash .splash-image {
-        text-align: center;
-    }
-    .splash .splash-head {
-        font-size: 300%;
-        margin: 0em 0;
 
-    }
-    .splash .splash-subhead {
-        color: #999;
-        font-weight: 300;
-        line-height: 1.4em;
-    }
-    .splash .primary-button {
-        font-size: 150%;
-    }
+/* 
 
 
 .content .content-ribbon {
@@ -144,7 +117,7 @@ body .primary-button {
             }
 
     table {
-        *border-collapse: collapse; /* IE7 and lower */
+        *border-collapse: collapse; 
         margin: 0 auto;
         width: 100%;
         border-collapse: collapse;
@@ -198,6 +171,110 @@ body .primary-button {
         margin-top: -75px;
         visibility: hidden;
     }
+*/
+
+
+
+/* sidebar */
+
+.bs-docs-sidebar {
+    position: fixed;
+    top: 0;
+    width: 270px;
+    margin: 0;
+    padding: 0;
+    list-style: none; 
+    left: 0;
+    bottom: 0;
+    z-index: 1000; /* so the menu or its navicon stays above all content */
+    background: #fefefe;
+    border-right: 1px solid #999;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+}
+.bs-docs-sidebar .nav>li {
+    margin: 0;
+}
+
+/* all links */
+.bs-docs-sidebar .nav>li>a {
+    border:none;
+    color: #555;
+    padding: 0.6em 0 0.6em 20px;
+    font-size: 14px;
+} 
+
+
+.bs-docs-sidebar .nav>li>a.category {
+    font-size: 110%;
+    font-weight: bold;
+}
+
+/* nested links */
+.bs-docs-sidebar .nav .nav > li > a {
+    border: none;
+    padding-left: 40px;
+    font-size: 13px;
+}
+
+/* active & hover links */
+.bs-docs-sidebar .nav>.active>a, 
+.bs-docs-sidebar .nav>li>a:hover, 
+.bs-docs-sidebar .nav>li>a:focus {
+    color: #fff;                 
+    text-decoration: none;        
+    background: #5FA9E8;
+}
+/* all active links */
+.bs-docs-sidebar .nav>li>a.selected,
+.bs-docs-sidebar .nav>.active>a, 
+.bs-docs-sidebar .nav>.active:hover>a,
+.bs-docs-sidebar .nav>.active:focus>a {
+    color: #fff;
+    font-weight: bold;
+    background: #428bca;
+}
+/* nested active links */
+.bs-docs-sidebar .nav .nav>.active>a, 
+.bs-docs-sidebar .nav .nav>.active:hover>a,
+.bs-docs-sidebar .nav .nav>.active:focus>a {
+    background: transparent;
+    font-weight: bold;
+    background: #5FA9E8;
+}
+
+/* hide inactive nested list */
+.bs-docs-sidebar .nav ul.nav {
+    display: none;           
+}
+/* show active nested list */
+.bs-docs-sidebar .nav>.active>ul.nav {
+    display: block;           
+}
+.bs-docs-sidebar .logo {
+    color: #444;
+    background: white;
+    text-align: left;
+    width: 100%;
+    display: block;
+    padding: 1em;
+    text-transform: uppercase;
+}
+.bs-docs-sidebar .logo > img{
+    height: 40px;
+}
+
+.bs-docs-sidebar .love {
+    position: absolute;
+    bottom: 0;
+    right: 10px;
+    width: 100%;
+    text-align: right;
+    font-size: 90%;
+}
+
+
+/* Libraries buttons */
 .official {
     color: green;
     font-size: 90%;
@@ -207,3 +284,4 @@ body .primary-button {
 .official:before {
    content: "✓ ";
 }
+
