add beta ribbon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
         {% include head.html %}  
     </head>
     <body>  
+    <img src="/img/beta.gif" class="ribbon" alt="beta"/>
     <div id="wrapper">
         <!--Nav Bar -->
         <nav class="bs-docs-sidebar"  role="navigation">
