--- a/_includes/1.0/libraries/ruby.html
+++ b/_includes/1.0/libraries/ruby.html
@@ -1,12 +1,45 @@
 <div id="ruby">
 
-<h2 class="blue">Ruby: myERP API gem</h2>
+<h3>Ruby: myERP API gem</h3>
 
 <p>The myERP API gem.</p>
 
 <p>
-    <a href="https://github.com/myERP/myerp-ruby-api-client" target="_blank" class="pure-button primary-button">View library</a>
+    <a href="https://github.com/myERP/myerp-ruby-api-client" target="_blank" class="btn btn-success">View library</a>
     <span class="official">Official</span>
 </p>
+
+
+{% highlight ruby %}
+#SAMPLE
+client = MyERP.client('API_EMAIL', 'API_KEY')
+
+# Retrieve all customers and leads
+puts client.customers.all
+
+# Get a specific customer/lead
+puts client.customers.find(261367)
+
+# Create a customer
+customer = MyERP::Customer.new
+customer.type = 2 #individual
+customer.status = 1 #customer
+customer.first_name = "John"
+customer.last_name = "Doe"
+customer.email = "john.doe@mail.com"
+
+customer = client.customers.save(customer)
+puts "#{customer.full_name} created [id=#{customer.id}]"
+
+# Update some fields
+customer.first_name = "Jane"
+customer = client.customers.save(customer)
+puts "#{customer.full_name} updated [id=#{customer.id}]"
+
+# Delete a customer
+customer = client.customers.delete(customer)
+puts "#{customer.full_name} deleted [id=#{customer.id}]"
+{% endhighlight %}
+
 
 </div>
